uzzduotys dar nepatikrintos DEC14

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
-.red {
-    color: red;
-}
-.blue {
+.card {
+    height: 300px;
+    width: 300px;
+    border: 1px solid rgb(180, 179, 179);
     color: blue;
+    text-align: center;
 }
